--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@solana/wallet-adapter-react": "^0.15.35",
     "@solana/wallet-adapter-wallets": "^0.19.32",
     "@solana/web3.js": "^1.98.0",
+    "@vercel/analytics": "^1.5.0",
     "@wallet-standard/features": "^1.1.0",
     "classnames": "^2.5.1",
     "next": "15.2.1",
